# mihome-ctl

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.skills/: preferences.yaml
THIRD_PARTY_LICENSES/: Xiaomi-cloud-tokens-extractor-LICENSE
docs/: auth-token.md  auth-token.zh-TW.md  index.md  index.zh-TW.md  ir.md  login-troubleshooting.md
skills/mihome-ir/: SKILL.md
src/mihome_ctl/: __init__.py  __main__.py  config.py  connector.py  mcp_server.py  render.py  session.py
src/mihome_ctl/commands/: __init__.py  action.py  devices.py  extract.py  ha_export.py  ir.py  ir_ac.py  ir_code.py  ir_send.py  miio.py  prop_get.py  prop_set.py  setup.py  show.py  spec.py  tui.py  verify.py
src/mihome_ctl/core/: __init__.py  cloudapi.py  haexport.py  lan.py  miot.py  miotspec.py  operations.py  pronto.py
src/mihome_ctl/core/ircodec/: __init__.py  base.py  native.py
src/mihome_ctl/tui/: __init__.py  app.py  screens.py
tests/: test_cli.py  test_config.py  test_haexport.py  test_ir_keys.py  test_ircodec.py  test_lan.py  test_miot.py  test_miotspec.py  test_operations.py  test_pronto.py  test_session.py  test_tui.py
