[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mihome-ctl"
version = "0.4.0"
description = "Passwordless QR login to the official Xiaomi cloud: extract per-device miIO tokens / BLE keys and control cloud IR remotes (TV / A-C / fan / DIY)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Da-Wei Lee", email = "daviddwlee84@gmail.com" }]
keywords = ["xiaomi", "mijia", "miio", "smart-home", "ir", "token", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
]
dependencies = [
    "tyro>=0.9",
    "requests",
    "pycryptodome",
    "charset-normalizer",
    "Pillow",
    "colorama",
    "qrcode",
    "platformdirs>=4",
]

[project.optional-dependencies]
# LAN-local verification of a device token (python-miio); heavy, opt-in.
verify = ["python-miio"]
# Expose the operations as MCP tools for Claude / agents.
mcp = ["mcp>=1.2"]
# Interactive terminal UI.
tui = ["textual>=0.86,<9"]
# Build the docs site (mkdocs serve / build).
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocs-static-i18n>=1.2",
    "pymdown-extensions>=10.7",
]

[project.scripts]
mihome-ctl = "mihome_ctl.__main__:main"
mihome-ctl-mcp = "mihome_ctl.mcp_server:main"
mihome-ctl-tui = "mihome_ctl.tui.app:main"

[project.urls]
Homepage = "https://github.com/daviddwlee84/mihome-ctl"
Issues = "https://github.com/daviddwlee84/mihome-ctl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mihome_ctl"]

# Ship the agent skill inside the wheel so `mihome-ctl setup` can install it
# offline (no Node). The repo-top-level skills/ copy stays for `npx skills`.
[tool.hatch.build.targets.wheel.force-include]
"skills/mihome-ir/SKILL.md" = "mihome_ctl/_skill/SKILL.md"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long Chinese help strings

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]
